# HW8_web

./: README.md  pyproject.toml  requirements.txt
part_1/: main.py
part_1/seeds/: models.py  seed.py
part_2/: consumer.py  consumer_email.py  consumer_sms.py  models.py  produser.py
